# modelrunner

./: .gitmodules  next.plan.md
runner/: .gitignore  Cargo.toml  README.md
runner/.github/workflows/: ci.yml  docker.yml
runner/crates/runner-api/: Cargo.toml  build.rs
runner/crates/runner-api/src/: lib.rs
runner/crates/runner-api/tests/: integration.rs
runner/crates/runner-backend/: Cargo.toml
runner/crates/runner-backend-llamacpp/: Cargo.toml  build.rs
runner/crates/runner-backend-llamacpp/src/: lib.rs
runner/crates/runner-backend/src/: lib.rs
runner/crates/runner-cli/: Cargo.toml
runner/crates/runner-cli/examples/: bench.rs
runner/crates/runner-cli/src/: main.rs
runner/crates/runner-common/: Cargo.toml
runner/crates/runner-common/src/: lib.rs
runner/crates/runner-core/: Cargo.toml
runner/crates/runner-core/src/: decode.rs  kv.rs  lib.rs  sampler.rs  scheduler.rs
runner/crates/runner-core/tests/: kv_tests.rs  sampler_tests.rs
runner/crates/runner-obs/: Cargo.toml
runner/crates/runner-obs/src/: lib.rs
runner/docker/: Dockerfile.cpu  Dockerfile.cuda
runner/docs/: QUICKSTART.md
runner/scripts/: build_llamacpp.sh  vendor_llama.ps1  vendor_llama.sh
