[package]
name = "runner-api"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
runner-common = { path = "../runner-common" }
runner-core = { path = "../runner-core" }
runner-backend = { path = "../runner-backend" }
runner-backend-llamacpp = { path = "../runner-backend-llamacpp" }
runner-obs = { path = "../runner-obs", features = [] }
axum = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
prometheus = { workspace = true }
tokio-stream = { workspace = true }
once_cell = { workspace = true }

