[package]
name = "runner-cli"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
clap = { workspace = true }
runner-api = { path = "../runner-api" }
runner-backend = { path = "../runner-backend" }
runner-core = { path = "../runner-core" }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
axum = { workspace = true }
reqwest = { workspace = true }
sysinfo = { workspace = true }

